# posturelab_opus47

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml
ai-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-service/app/: fetch_model.py  main.py  pose.py
ai-service/tests/: smoke.py  test_docker_parity.py  test_posture_math.py
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/posturelab/app/: MainActivity.kt
android/app/src/main/java/com/posturelab/app/analysis/: PoseAnalyzer.kt  PostureMath.kt
android/app/src/main/java/com/posturelab/app/report/: PdfExporter.kt  PostureReportText.kt
android/app/src/main/java/com/posturelab/app/ui/: AppViewModel.kt  BrandLogo.kt  CaptureScreen.kt  ReportScreen.kt  Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/posturelab/app/analysis/: PostureMathTest.kt
chat_sessions/: 2026-05-03_initial-scaffold.md  2026-05-03_uv-setup-docker-fix.md
shared/: posture_math.py
shared/brand/: README.md
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  Logo.tsx  PhotoSource.tsx  Report.tsx  api.ts  brand.ts  index.css  pdf.ts
