[project]
name = "posturelab-ai-service"
version = "1.0.0"
description = "PostureLab AI posture analysis service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "mediapipe>=0.10.30",
    "numpy>=1.26,<3",
    "pillow==10.4.0",
    "opencv-python-headless==4.10.0.84",
    "huggingface_hub==0.24.7",
    "pydantic==2.9.2",
]

[dependency-groups]
dev = [
    "requests>=2.31",
    "pytest>=7.0",
]
